--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -29,7 +29,11 @@
   {{/each}}
   </ul>
 </div>
+  {{#if userInfo}}
 <div class="editar"><a href="/editar/{{this._id}}"><i class="fas fa-edit"></i></a></div>
+ {{else}}
+               testest
+                {{/if}}
 </div>
 
 
