--- a/src/views/newposts.handlebars
+++ b/src/views/newposts.handlebars
@@ -3,15 +3,15 @@
   <form action="/crearnuevo/post" method="post">
     <div>
       <label id="idtest" for="idtest">id user:</label>
-      <input type="text" name="idtest" id="idtest" value="{{users._id}}" required>
+      <input type="text" name="idtest" id="idtest" value="{{userInfo.userId}}" required>
     </div>
     <div>
       <label id="userid" for="avatar">nombre del avatar:</label>
-      <input type="text" name="avatar" id="userid" value="{{users.avatar}}" required>
+      <input type="text" name="avatar" id="userid" value="{{userInfo.userAvatar}}" required>
     </div>
     <div>
       <label id="userid" for="userid">nombre del usuario:</label>
-      <input type="text" name="userid" id="userid" value="{{this.usuario}}" required>
+      <input type="text" name="userid" id="userid" value="{{userInfo.userUsuario}}" required>
     </div>
     <div class="titulo-post">
       <input type="text" name="titulo" id="titulo" required>
