--- a/src/views/layouts/main-layout.handlebars
+++ b/src/views/layouts/main-layout.handlebars
@@ -26,7 +26,7 @@
         <div class="usuario-logeado">
             {{#if userInfo}}
             <img src="{{userInfo.userAvatar}}"
-                class="avatar-header"> <i class="far fa-user"></i> {{userInfo.userUsuario}} 
+                class="avatar-header"> <i class="far fa-user"></i> {{userInfo.userUsuario}} - <a href="/logout">Deslogearse</a>
                 {{else}}
                 <div><button class="loginbutton"><a href="/login"><i class="fas fa-sign-in-alt"></i> Login</a></button><button class="loginbutton"><a href="/registrarse"><i class="fas fa-user-plus"></i> Registrarse</a></button></div>
                 {{/if}}
