--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,9 +1,14 @@
-<div class="nuevotema">
+<div class="nuevoregistrar">
+   <div class="texto-registrar">
+    <h1>Aqui puedes acceder una vez que tienes tu usuario registrado</h1>
+  </div>
   <form action="/login/form" method="post">
     <div class="titulo-post">
+      <h1>Nombre del usuario:</h1>
       <input type="text" name="usuario" id="usuario" required>
     </div>
     <div class="titulo-post">
+      <h1>Contraseña:</h1>
       <input type="text" name="password" id="password" required>
     </div>
     <div class="botoncrear"> <input type="submit" value="Login"></div>
