--- a/src/views/registrar.handlebars
+++ b/src/views/registrar.handlebars
@@ -1,15 +1,22 @@
-<div class="nuevotema">
+<div class="nuevoregistrar">
+  <div class="texto-registrar">
+    <h1>Hola aqui te puedes registrar y acceder a todas las funcionalidades de la aplicacion</h1>
+  </div>
   <form action="/registrarusuario" method="post">
     <div class="titulo-post">
+      <h1>Nombre del usuario:</h1>
       <input type="text" name="usuario" id="usuario" required>
     </div>
     <div class="titulo-post">
+      <h1>Email:</h1>
       <input type="text" name="email" id="email" required>
     </div>
     <div class="titulo-post">
+      <h1>Contraseña:</h1>
       <input type="text" name="password" id="password" required>
     </div>
      <div class="titulo-post">
+       <h1>Avatar URL:</h1>
       <input type="text" name="avatar" id="avatar">
     </div>
     <div class="botoncrear"> <input type="submit" value="Crear">
