--- a/src/views/layouts/main-layout.handlebars
+++ b/src/views/layouts/main-layout.handlebars
@@ -25,7 +25,7 @@
         </div>
         <div class="usuario-logeado">
             {{#if userInfo}}
-            <img src="{{userInfo.userAvatar}}"
+            <img src="/avatar/{{userInfo.userAvatar}}"
                 class="avatar-header"> <i class="far fa-user"></i> {{userInfo.userUsuario}} - <a href="/perfiles/{{userInfo.userId}}">Mi perfil</a> - <a href="/logout">Deslogearse</a>
                 {{else}}
                 <div><button class="loginbutton"><a href="/login"><i class="fas fa-sign-in-alt"></i> Login</a></button><button class="loginbutton"><a href="/registrarse"><i class="fas fa-user-plus"></i> Registrarse</a></button></div>
