--- a/src/views/perfiles.handlebars
+++ b/src/views/perfiles.handlebars
@@ -1,6 +1,6 @@
 <section class="perfiles-container">
 <div class="avatar-perfil">
-    <img src="{{dataperfiles.avatar}}" />
+    <img src="/avatar/{{dataperfiles.avatar}}" />
 </div>
 <div class="datos-perfil">
     <div>{{dataperfiles.usuario}}</div>
