--- a/src/views/posts.handlebars
+++ b/src/views/posts.handlebars
@@ -2,7 +2,7 @@
 <div class="flex-post">
   <div class="el-author">
     <div class="avatar2">
-      <img class="avatar" src="{{post.avatar}}" />
+      <img class="avatar" src="/avatar/{{post.avatar}}" />
     </div>
     <a href="/perfiles/{{post.idtest}}">{{post.userid}}</a>
   </div>
@@ -19,7 +19,7 @@
 <div class="flex-post commentarios">
   <div class="el-author">
     <div class="avatar2">
-      <img class="avatar" src="{{this.avatarcooment}}" />
+      <img class="avatar" src="/avatar/{{this.avatarcooment}}" />
     </div>
     {{this.userid}}
   </div>
