--- a/src/views/registrar.handlebars
+++ b/src/views/registrar.handlebars
@@ -2,6 +2,9 @@
   <div class="texto-registrar">
     <h1>Hola aqui te puedes registrar y acceder a todas las funcionalidades de la aplicacion</h1>
   </div>
+  <div class="error">
+    {{this.error}}
+  </div>
   <form action="/registrarusuario" method="post" enctype="multipart/form-data">
     <div class="titulo-post">
       <h1>Nombre del usuario:</h1>
