--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -9,6 +9,11 @@ a {
   text-decoration: none;
 }
 
+.error {
+  color: red;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
 .los-posteos {
   padding: 20px 10px;
   display: flex;
