--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -8,7 +8,7 @@
     <span class="total">mensajes totales</span>
     </div>
       <div>
-  <span class="numbert"><i class="fas fa-users"></i>  {{this.numberegister}}</span><br />
+  <span class="numbert"><i class="fas fa-post"></i>  {{this.numberegister}}</span><br />
     <span class="total">usuario registrados</span>
     </div>
 </article>
@@ -29,7 +29,7 @@
 <article class="posteos">
 <div class="thead">Preguntas e Dudas</div>
 <div class="todo-posts">
-{{#each usersreverse}}
+{{#each postreverse}}
 <div class="los-posteos">
 <div class="el-icono"><i class="far fa-file-code"></i></div>
 <div class="titulo"><a href="posts/{{this._id}}">{{this.titulo}}</a><br />
