--- a/src/views/registrar.handlebars
+++ b/src/views/registrar.handlebars
@@ -16,7 +16,7 @@
     </div>
     <div class="titulo-post">
       <h1>Contraseña:</h1>
-      <input type="text" name="password" id="password" required>
+      <input type="password" name="password" id="password" required>
     </div>
      <div class="titulo-post">
        <h1>Avatar URL:</h1>
